manually added the baseUrl

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/table/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
-    <script type="module" crossorigin src="/main/index-BHvLrYSY.js"></script>
-    <link rel="stylesheet" crossorigin href="/static/css/index.UlT_wDap1_zj.css">
+    <script type="module" crossorigin src="/table/main/index-BHvLrYSY.js"></script>
+    <link rel="stylesheet" crossorigin href="/table/static/css/index.UlT_wDap1_zj.css">
   </head>
   <body>
     <div id="root"></div>
