--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/table/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
-    <script type="module" crossorigin src="/table/main/index-BHvLrYSY.js"></script>
-    <link rel="stylesheet" crossorigin href="/table/static/css/index.UlT_wDap1_zj.css">
+    <script type="module" crossorigin src="/table/main/index-BW8qGeyu.js"></script>
+    <link rel="stylesheet" crossorigin href="/table/static/css/index.DJrWpURLvqw6.css">
   </head>
   <body>
     <div id="root"></div>
